--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,29 @@
 /*  your css code here. If applicable */
+body{
+	background-color:#cccccc;
+}
+h3{
+	text-align:center;
+}
+.player_one a{
+	text-decoration:none;
+	color:black;
+	margin:5px;
+	font-size:15px
+}
+.player_one{
+	background-color:white;
+	border-radius:5px;
+	padding:20px;
+}
+h5{
+	text-align:center;
+}
+.player_two{
+	background-color:white;
+}
+
+
+
+
+
